# qt_sandbox

./: CMakeLists.txt  ImagesResources.qrc  RaspberryPi.qmlproject  RaspberryPi.qmlproject.qtds  qmlmodules  translations.qrc
content/: App.qml  Screen01.ui.qml  Screen02.ui.qml
i18n/: base.ts  qml_en.ts  qml_fr.ts
imports/: CMakeLists.txt
imports/RaspberryPi/: AirportGlobalSelection.qml  CMakeLists.txt  JsonDataModel.qml  LanguageButtonModel.qml  airlinerequestfilter.cpp  airlinerequestfilter.h  filereader.h  httprequesthandler.cpp  httprequesthandler.h  qmldir  source.json  translationengine.cpp  translationengine.h
imports/RaspberryPi/designer/: plugin.metainfo
imports/RaspberryPi/src/: airlinerequestfilter.cpp  airlinerequestfilter.h  filereader.cpp  httprequesthandler.cpp  httprequesthandler.h  stationcity.cpp  stationcity.h  translationengine.h
src/: import_qml_plugins.h  main.cpp
